<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PressureActivity">

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textSize"
        android:background="@color/colorPrimary"
        android:padding="@dimen/buttonPadding"
        android:text="@string/save"
        android:textColor="@color/colorTextOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDateOfMeasurement" />

    <EditText
        android:id="@+id/editLP"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/labelLowPressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelLowPressure"
        tools:layout_editor_absoluteX="263dp" />

    <EditText
        android:id="@+id/editPulse"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/labelPulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelPulse"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editDateOfMeasurement"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="datetime"
        android:text=""
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/labelDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelDate"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editHP"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/labelHighPressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelHighPressure"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/labelHighPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/high_pressure"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/labelLowPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textSize"
        android:text="@string/low_pressure"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editHP" />

    <TextView
        android:id="@+id/labelPulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textSize"
        android:text="@string/pulse"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLP" />

    <TextView
        android:id="@+id/labelDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textSize"
        android:text="@string/date_of_measurement"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTachycardia" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_pressure"
        android:drawablePadding="@dimen/textSize"
        android:text="@string/preasure"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxTachycardia"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/textSize"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/tachycardia"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPulse" />


</androidx.constraintlayout.widget.ConstraintLayout>