<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:padding="@dimen/buttonPadding"
        android:text="@string/save"
        android:textColor="@color/colorTextOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAge" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintTop_toTopOf="@id/labelAge"
        app:layout_constraintBottom_toBottomOf="@id/labelAge"
        android:inputType="number"
        android:text=""
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="250dp" />

    <EditText
        android:id="@+id/editFio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelFio" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart_rate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textSize"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonPressure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="10"
            android:background="@color/colorTextOnPrimary"
            android:drawableTop="@drawable/ic_action_pressure"
            android:drawablePadding="4dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/preasure"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/buttonVitalStat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="10"
            android:background="@color/colorTextOnPrimary"
            android:drawableTop="@drawable/ic_action_vital_stat"
            android:drawablePadding="4dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/vital_statistic"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SmallSp" />

        <Space
            android:layout_width="@dimen/textSize"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <TextView
        android:id="@+id/labelAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/age"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editFio" />

    <TextView
        android:id="@+id/labelFio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/fio"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_title"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/imageLogo"
        app:layout_constraintTop_toTopOf="@+id/imageLogo" />


</androidx.constraintlayout.widget.ConstraintLayout>